style(shop.css): update styles for aside, upgradeCard, and upgradeIconWrapper for better layout and aesthetics style(main.css): change paragraph color to var(--Chocolate-1) for improved readability fix(script.js): correct French translation for upgradeCps display text fix(shop.json): update upgrade descriptions for clarity and consistency

--- a/assets/styles/components/shop.css
+++ b/assets/styles/components/shop.css
@@ -1,39 +1,44 @@
 aside {
-    margin: 0 10px;
-    gap: 20px;
+    border-radius: 2%;
+    margin: 0 25px;
+    gap: 12px;
     background: var(--Secondary-1);
     align-items: center;
     flex-direction: column;
-    width: 25%;
+    width: 18%;
     box-shadow: 0 0 15px 6px rgba(0, 0, 0, 0.15);
 }
 
 .upgradeCard {
-    align-items: center;
+    border-radius: 10%;
+    width: 88%;
     background-color: #f3f4f6;
-    width: 100%;
 }
 
 .upgradeIconWrapper {
+    margin: auto;
     width: 15%;
-    justify-content: center;
+    background-color: #e5e7eb;
+    border-radius: 25%;
 }
 
 .upgradeContent {
     flex-direction: column;
     width: 35%;
-    margin: auto;
+    margin: 0 auto;
 }
 
-.upgradeContent h4 p{
-    margin: auto;
-
+.upgradeContent h4 p {
+    margin: 10px;
+    justify-content: center;
 }
 
 .upgradeStats {
-    justify-content: flex-end;
     width: 30%;
 }
+
 .upgradeStats p {
-   margin: auto;
+    color: var(--Success);
+    margin: auto;
+    display: flex;
 }
